# precommit-practice

./: .buildinfo  LICENSE  NOTES.md  README.md  check.sh  genindex.html  greetme.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  theory.html
.github/workflows/: ci.yml  sphinx.yml
_sources/: theory.md.txt
docs/source/: conf.py  greetme.md  index.md  index.rst
greetme/: __init__.py
tests/: __init__.py  test__greetme.py
